--- a/app/src/main/res/layout/load_seed_config.xml
+++ b/app/src/main/res/layout/load_seed_config.xml
@@ -3,4 +3,93 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="请输入钱包名称："
+            android:textColor="#000000" />
+
+        <EditText
+            android:id="@+id/editText3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="请输入少于15字"
+            android:inputType="textPersonName" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="请输入助记词："
+            android:textColor="#000000" />
+
+        <EditText
+            android:id="@+id/editText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="请以空格隔断"
+            android:inputType="textPersonName" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="请输入创建时间："
+            android:textColor="#000000" />
+
+        <EditText
+            android:id="@+id/editText2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="请输入数字"
+            android:inputType="textPersonName" />
+    </LinearLayout>
+
+    <Switch
+        android:id="@+id/restore_network"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textOff="0"
+        android:textOn="1"
+        android:text="是否使用TestNet"
+        android:checked="false"
+        />
+
+    <Switch
+        android:id="@+id/restore_mulsig"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="是否使用多重签名"
+        android:textOff="0"
+        android:textOn="1"
+        android:checked="false"
+        />
+
+    <Button
+        android:id="@+id/restore_from_seed"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="restore wallet" />
+
 </LinearLayout>
